--- a/분석/analysis.html
+++ b/분석/analysis.html
@@ -4,15 +4,196 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="analysis.css">
-    <link rel="stylesheet2" href="web.js">
-    <title>어울림</title>
+    <script src="https://kit.fontawesome.com/0e4eb96f7d.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/summer.css">
+    <title> 어울림 </title>
     </style>
 </head>
 <body>
-    <div class="dummy_page">
-        Mobile responsive footer
+  <nav class="navbar">
+    <hr class="top_line"/>
+    <div class="start-line">
+        여름
+    </div>
+    <div class="logo">어울림</div>
+    <div class="menu">
+        <ul class="navbar_menu">
+            <li><a href="#">여름 라이트</a></li>
+            <li><a href="#">여름 트루</a></li>
+            <li><a href="#">여름 뮤트</a></li>
+        </ul>
+        <a href="#" class="hamburger_btn">
+            <i class="fa-solid fa-bars"></i>
+        </a>
+    </div>
+    <div class="end-line"></div>
+</nav>
+<div id="outline"></div>
+<!-- carousel -->
+      <div class="carousel">
+        <div class="carousel-inner">
+            <input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden="" checked="checked">
+            <div class="carousel-item">
+                <div class="sumlight_page">
+                  <hr class="top_line"/>
+                  <br><br>
+                  <b>여름 라이트인 당신은</b>
+                  <br>
+                  <br>
+                    <center><img src="이미지/flow.jpg" class="img"></center>
+                    <p>피부색이 투명하고 붉은 기를 가지고 있어서 인상은 차분하면서도 청량감이 넘치는 사람입니다.<br>
+                    고명도•고체도의 블루베이스의 색상이 어울립니다. </p>
+                    <br>  <br>
+                    <hr class="top_line"/>
+                  </div>
+            </div>
+            <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
+            <div class="carousel-item">
+              <div class="sumlight_page">
+                <hr class="top_line"/>
+                <br><br>
+                <b>당신의 팔레트를 채워드려요</b>
+                <br>
+                <br>
+                  <center><img src="이미지/팔레트01.jpg" class="img_p"></center>
+                  <p>당신과 조화를 이루는 색은 회색 기와 푸른 색 기가 살짝 도는 고명도의 은은한 파스넬 컬러입니다.<br>
+                  '여름 라이토 톤'의 컬러는 흰색이나 연하고 밝은 회색이 섞여 싱그러운 느낌을 줍니다. </p>
+                  <br>  <br>
+                  <hr class="top_line"/>
+                </div>
+            </div>
+            <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
+            <div class="carousel-item">
+              <div class="sumlight_page">
+                <hr class="top_line"/>
+                <br><br>
+                <b>베스트 스타일링</b>
+                <br>
+                <br>
+                  <center><img src="이미지/cometic_scl.png" class="img"></center>
+                  <p>메이크업
+                    ① 아이<br>
+                    흰빛이 많이 돌고 쉬머한 필이 든 핑크 컬러 섀도우를 연하게 발라주세요<br>
+                    블랙 컬러의 아이라이너로 라인을 또렷하고 얇게 그려주세요. <br>
+                    <br>
+                    ② 치크<br>
+                    흰빛이 많이 도는 핑크나 라벤더 컬러의 블러셔를 볼 중앙에 여리여리하게 발색하면 청순함을 더할 수 있습니다. <br>
+                    <br>
+                    ③ 립<br>
+                    딸기우유를 연상하게 하는 핑크 컬러를 입술에 전체적으로 채워 발라주세요. <br>
+                    글로시한 체형의 틴트가 잘 어울립니다.</p><br>
+                  <br>  <br>
+                  <hr class="top_line"/>
+                </div>
+            </div>
+            <label for="carousel-3" class="carousel-control prev control-1">‹</label>
+            <label for="carousel-2" class="carousel-control next control-1">›</label>
+            <label for="carousel-1" class="carousel-control prev control-2">‹</label>
+            <label for="carousel-3" class="carousel-control next control-2">›</label>
+            <label for="carousel-2" class="carousel-control prev control-3">‹</label>
+            <label for="carousel-1" class="carousel-control next control-3">›</label>
+            <ol class="carousel-indicators">
+                <li>
+                    <label for="carousel-1" class="carousel-bullet">•</label>
+                </li>
+                <li>
+                    <label for="carousel-2" class="carousel-bullet">•</label>
+                </li>
+                <li>
+                    <label for="carousel-3" class="carousel-bullet">•</label>
+                </li>
+            </ol>
+        </div>
+    </div>
+        <div id="outline2"></div>
+    </div>
+
+        <div class="carousel1">
+          <div class="carousel1-inner">
+              <input class="carousel1-open" type="radio" id="carousel1-1" name="carousel1" aria-hidden="true" hidden="" checked="checked">
+              <div class="carousel1-item">
+                <div class="sumlight_page2">
+                  <hr class="top_line"/>
+                  <br><br>
+                  <b>여름 라이트를 위한 코디 추천 </b>
+                  <br>     <br>
+                  <img src="이미지/style1.png" class="styleimg">
+                  <img src="이미지/style2.png" class="styleimg">
+                  <img src="이미지/style3.png" class="styleimg">  
+                    <p>주로 깨끗하고 시원한 느낌을 주는 색(흰색, 하늘색 등)으로 코디를 하고<br>
+                    액세사리, 가방, 신발 등으로 포인트를 주면 더욱 좋습니다.</p>
+                      <br>  <br>
+                      <hr class="top_line"/>
+                  </div>
+              </div>
+              <input class="carousel1-open" type="radio" id="carousel1-2" name="carousel1" aria-hidden="true" hidden="">
+              <div class="carousel1-item">
+                <div class="sumlight_page2">
+                  <hr class="top_line"/>
+                  <br><br>
+                  <b>여름 라이트를 위한 코디 추천 </b>
+                  <br>     <br>
+                  <img src="이미지/sumlight.jpg" class="styleimg">
+                  <img src="이미지/sumlight2.jpg" class="styleimg">
+                  <img src="이미지/sumlight3.jpg" class="styleimg">
+                    </table>
+                    <p>여름 라이트 타입은 밝은 파스텔톤의, 은은하게 비치는 부드러운 소재가 가장 잘 어울려요. <br>
+                      광택이 심하지 않은 실크, 쉬폰재질을 활용해보세요.</p>
+                      <br>  <br>
+                      <hr class="top_line"/>
+                  </div>
+              </div>
+              <input class="carousel1-open" type="radio" id="carousel1-3" name="carousel1" aria-hidden="true" hidden="">
+              <div class="carousel1-item">
+                <div class="sumlight_page">
+                  <hr class="top_line"/>
+                  <br><br>
+                  <b>여름 라이트를 위한 립 추천 </b>
+                  <br>     <br>
+                  <img src="이미지/화장품1.jpg" class="styleimg">
+                  <img src="이미지/화장품2.jpg" class="styleimg">
+                  <img src="이미지/화장품3.png" class="styleimg">
+                    <p>	1. [투쿨포스쿨] 투쿨포스쿨 픽싱 블러 립 3호 핑크 가든<br>
+                      한줄평 : 색깔 너~무 예쁘고 입술에 밀착이 잘 돼요.. ㅎㅎ (공식 홈페이지 구매평) <br>
+                      12,000원<br>
+                      <br>
+                      2. [홀리카홀리카] 홀리카홀리카 하트크러쉬 글로우 틴트 에어 티 브루잉 컬러즈 13 메이<br>
+                        한줄평 : 끈적거리지 않아서 넘 좋아요ㅠㅠ 이런 틴트가 존재한다는 걸 이제 알았네요<br>
+                        얇게 발리고 광택감 넘 예뽀요 (공식 홈페이지 구매평) <br>
+                        7,304원<br>
+                        <br>  
+                        3. [헤라] 헤라 센슈얼 프레쉬 누드 틴트 138호 베티<br>
+                        한줄평 : 데일리 핑크립으로 딱인데 쥬빌리보다 좀 더 톤 다운이 되고<br>
+                        살짝 채도가 빠진 플럼 느낌이어서 분위기 있는 컬러더라구요! (네이버 블로그, 유주노트)<br>
+                        25,900원<br>
+                        <br> 
+                    </p>
+                      <br>  <br>
+                      <hr class="top_line"/>
+                  </div>
+              </div>
+              <label for="carousel1-3" class="carousel1-control prev control1-1">‹</label>
+              <label for="carousel1-2" class="carousel1-control next control1-1">›</label>
+              <label for="carousel1-1" class="carousel1-control prev control1-2">‹</label>
+              <label for="carousel1-3" class="carousel1-control next control1-2">›</label>
+              <label for="carousel1-2" class="carousel1-control prev control1-3">‹</label>
+              <label for="carousel1-1" class="carousel1-control next control1-3">›</label>
+              <ol class="carousel1-indicators">
+                  <li>
+                      <label for="carousel1-1" class="carousel1-bullet">•</label>
+                  </li>
+                  <li>
+                      <label for="carousel1-2" class="carousel1-bullet">•</label>
+                  </li>
+                  <li>
+                      <label for="carousel1-3" class="carousel1-bullet">•</label>
+                  </li>
+              </ol>
+          </div>
       </div>
+          <div id="outline2"></div>
+      </div>
+
       <!-- FOOTER START -->
       <div class="footer">
         <div class="contain">
@@ -47,5 +228,6 @@
       </div>
       </div>
       <!-- END OF FOOTER -->
+      <script src="js/summer.js" defer></script>
 </body>
 </html>
