분석 메인 페이지_최종 수정 본

--- a/분석/analysis.html
+++ b/분석/analysis.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/0e4eb96f7d.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/summer.css">
+    <link rel="stylesheet" href="analysis.css">
     <title> 어울림 </title>
     </style>
 </head>
@@ -44,7 +44,7 @@
                     <p>피부색이 투명하고 붉은 기를 가지고 있어서 인상은 차분하면서도 청량감이 넘치는 사람입니다.<br>
                     고명도•고체도의 블루베이스의 색상이 어울립니다. </p>
                     <br>  <br>
-                    <hr class="top_line"/>
+                    <hr class="top_line_down"/>
                   </div>
             </div>
             <input class="carousel-open" type="radio" id="carousel-2" name="carousel" aria-hidden="true" hidden="">
@@ -59,7 +59,7 @@
                   <p>당신과 조화를 이루는 색은 회색 기와 푸른 색 기가 살짝 도는 고명도의 은은한 파스넬 컬러입니다.<br>
                   '여름 라이토 톤'의 컬러는 흰색이나 연하고 밝은 회색이 섞여 싱그러운 느낌을 줍니다. </p>
                   <br>  <br>
-                  <hr class="top_line"/>
+                  <hr class="top_line_down"/>
                 </div>
             </div>
             <input class="carousel-open" type="radio" id="carousel-3" name="carousel" aria-hidden="true" hidden="">
@@ -83,7 +83,7 @@
                     딸기우유를 연상하게 하는 핑크 컬러를 입술에 전체적으로 채워 발라주세요. <br>
                     글로시한 체형의 틴트가 잘 어울립니다.</p><br>
                   <br>  <br>
-                  <hr class="top_line"/>
+                  <hr class="top_line_down"/>
                 </div>
             </div>
             <label for="carousel-3" class="carousel-control prev control-1">‹</label>
@@ -123,7 +123,7 @@
                     <p>주로 깨끗하고 시원한 느낌을 주는 색(흰색, 하늘색 등)으로 코디를 하고<br>
                     액세사리, 가방, 신발 등으로 포인트를 주면 더욱 좋습니다.</p>
                       <br>  <br>
-                      <hr class="top_line"/>
+                      <hr class="top_line_down"/>
                   </div>
               </div>
               <input class="carousel1-open" type="radio" id="carousel1-2" name="carousel1" aria-hidden="true" hidden="">
@@ -140,7 +140,7 @@
                     <p>여름 라이트 타입은 밝은 파스텔톤의, 은은하게 비치는 부드러운 소재가 가장 잘 어울려요. <br>
                       광택이 심하지 않은 실크, 쉬폰재질을 활용해보세요.</p>
                       <br>  <br>
-                      <hr class="top_line"/>
+                      <hr class="top_line_down"/>
                   </div>
               </div>
               <input class="carousel1-open" type="radio" id="carousel1-3" name="carousel1" aria-hidden="true" hidden="">
@@ -169,7 +169,7 @@
                         <br> 
                     </p>
                       <br>  <br>
-                      <hr class="top_line"/>
+                      <hr class="top_line_down"/>
                   </div>
               </div>
               <label for="carousel1-3" class="carousel1-control prev control1-1">‹</label>
@@ -228,6 +228,6 @@
       </div>
       </div>
       <!-- END OF FOOTER -->
-      <script src="js/summer.js" defer></script>
+      <script src="web.js" defer></script>
 </body>
 </html>
